# DPDK-20.11.1-Morello

./: .gitmodules  cross_file_purecap.txt  meson.build  meson_options.txt
app/: meson.build
app/pdump/: main.c
app/proc-info/: main.c
app/test/: test_malloc.c
buildtools/pmdinfogen/: meson.build
config/: meson.build
config/arm/: meson.build
drivers/: meson.build
drivers/baseband/acc100/: rte_acc100_pmd.h
drivers/bus/: meson.build
drivers/bus/vdev/: version.map
drivers/common/: meson.build
drivers/common/cpt/: meson.build
drivers/common/qat/: qat_qp.h
drivers/compress/: meson.build
drivers/crypto/: meson.build
drivers/event/: meson.build
drivers/event/dsw/: dsw_evdev.h
drivers/event/octeontx/: timvf_evdev.h
drivers/mempool/: meson.build
drivers/net/: meson.build
drivers/net/bonding/: rte_eth_bond_8023ad.h
drivers/net/mlx4/: meson.build
drivers/net/pcap/: rte_eth_pcap.c
drivers/net/tap/: tap_bpf.h
drivers/net/virtio/virtio_user/: vhost_vdpa.c
drivers/raw/: meson.build
drivers/regex/: meson.build
drivers/vdpa/: meson.build
examples/: meson.build
lib/: meson.build
lib/librte_bpf/: bpf_jit_arm64.c  bpf_load.c  bpf_validate.c
lib/librte_eal/: version.map
lib/librte_eal/arm/: rte_cpuflags.c  (+1 more)
lib/librte_ethdev/: rte_ethdev.h
lib/librte_mbuf/: rte_mbuf.c
lib/librte_mempool/: rte_mempool.c
lib/librte_net/: rte_arp.h  rte_ether.h
lib/librte_pipeline/: rte_table_action.c
lib/librte_ring/: rte_ring_core.h
lib/librte_telemetry/: telemetry_legacy.c
lib/librte_vhost/: virtio_net.c
usertools/: dpdk-pmdinfo.py
(+27 files in other folders)
